# dbase-iii-reader

./: README.md  SETUP_XP_CONNECTION.md  app.py  exporter.py  pyproject.toml
tests/: conftest.py  test_integration.py  test_parsers.py
