[project]
name = "dat-exporter"
version = "0.1.0"
description = "Ekspor file DAT/DTA ke Excel dengan GUI Gradio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbfread>=2.0.7",
    "gradio>=6.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]

[project.scripts]
dat-exporter = "exporter:main"
dat-exporter-gui = "app:app.launch"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
